--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "restfull-api-sql",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/app.js",
   "scripts": {
     "start": "nodemon --exec ts-node src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc"
+    "build": "tsc && node dist/app.js"
   },
   "keywords": [],
   "author": "",
