--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon --exec ts-node src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc && node dist/app.js"
+    "build": "npx tsc && node dist/app.js"
   },
   "keywords": [],
   "author": "",
