--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon --exec ts-node src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx tsc && node dist/app.js"
+    "build": "npm install -g typescript && tsc && node dist/app.js"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +14,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "joi": "^17.9.2",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "typescript": "^4.0.0",
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
