--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "express": "^4.18.2",
     "joi": "^17.9.2",
     "mysql": "^2.18.1",
-    "typescript": "^4.0.0",
+    "typescript": "^4.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
