--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
   "scripts": {
     "start": "nodemon --exec ts-node src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc && node dist/app.js"
+    "build": "npx tsc && node dist/app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/pg": "^8.10.2",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "joi": "^17.9.2",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
