--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/ip": "^1.1.0",
     "@types/pg": "^8.10.2",
+    "axios": "^1.5.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "ip": "^1.1.8",
     "joi": "^17.9.2",
     "mysql": "^2.18.1",
     "pg": "^8.11.3",
