--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "dist/app.js",
-  "scripts": {
-    "start": "nodemon --exec ts-node src/app.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx tsc && node dist/app.js"
-  },
+"scripts": {
+  "start": "node dist/app.js",
+  "test": "echo \"Error: no test specified\" && exit 1",
+  "build": "npx tsc",
+  "dev": "nodemon --exec ts-node src/app.ts"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
