--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "dist/app.js",
   "scripts": {
     "start": "nodemon --exec ts-node src/app.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx tsc && node dist/app.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
