--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/app.js",
   "scripts": {
     "start": "ts-node src/app.ts",
+    "start:prood": "dist/app.js"
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
