--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "ip": "^1.1.8",
     "joi": "^17.9.2",
     "mysql": "^2.18.1",
+    "nodemon": "^3.0.1",
     "pg": "^8.11.3",
+    "ts-node": "^10.9.1",
     "typescript": "^4.0.0"
   },
   "devDependencies": {
